2010-03-16  Levi Bard  <levi@unity3d.com>

	* MacPlatform/MacPlatform.cs
	* MacPlatform/Framework/Carbon.cs
	* MacPlatform/Framework/ApplicationEvents.cs: Enable position 
	  to be passed in OpenDocuments call.

2010-02-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj:
	* Framework/NavDialog.cs:
	* Framework/HIToolbox.cs:
	* Framework/AppleEvent.cs:
	* Framework/CoreFoundation.cs:
	* MacSelectFileDialogHandler.cs: More work on native dialogs.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix extensions.

	* MacSelectFileDialogHandler.cs: Stub other dialog handlers.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Framework/Carbon.cs: Better errors in exceptions.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj:
	* Framework/Carbon.cs:
	* MacPlatform.addin.xml:
	* Framework/NavDialog.cs:
	* MacSelectFileDialogHandler.cs: First shot at implementing
	  Mac native dialogs.

2010-01-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Updater/UpdateService.cs: Send env flags to the update
	  server.

2010-01-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Updater/UpdateDialog.cs: Colorize betas and alphas in the
	  update dialog.

2010-01-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Updater/UpdateResult.cs: Fix property initialization.

	* Updater/UpdateDialog.cs: Remove unused field.

	* Updater/UpdateService.cs: Fix attribute name.

2010-01-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Updater/UpdateDialog.cs: Fix threading issue.

2010-01-27  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* Updater/UpdateResult.cs:
	* Updater/UpdateDialog.cs:
	* Updater/UpdateService.cs:
	* gtk-gui/MonoDevelop.Platform.Updater.UpdateDialog.cs: Add
	  new alpha channel and clean up GUI for switching channels.

2010-01-26  Michael Hutchinson  <mhutchinson@novell.com>
